# Personal_Search_Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  mentor-prompt.md  pyproject.toml  requirements.txt
 app/ tools/:  __init__.py  save_finding.py  web_search.py
 app/core/:  __init__.py  config.py
 app/graph/:  __init__.py  build.py  edges.py  nodes.py  state.py
.claude/: CLAUDE.md  settings.json
.claude/agent-memory/: notes.md
.claude/agents/: code-explainer.md  rag-reviewer.md
.claude/commands/: explain.md  plan.md  review.md
.claude/hooks/: auto-brain-save.sh  format.sh  load-memory.sh
.claude/output-style/: teacher.md
.claude/rules/: langgraph.md  python.md  rag.md  teaching.md
.claude/skills/agent-design/: SKILL.md
.claude/skills/agent-eval/: SKILL.md
.claude/skills/agent-memory/: SKILL.md
.claude/skills/data-prep/: SKILL.md
.claude/skills/eda/: SKILL.md
.claude/skills/guardrails/: SKILL.md
.claude/skills/langgraph-node/: SKILL.md
.claude/skills/mcp/: SKILL.md
app/:  __init__.py  __init__.py  cli.py
app/api/: __init__.py  main.py  routes.py
app/core/: __init__.py  config.py  logging.py  observability.py  run_config.py
app/graph/: __init__.py  build.py  edges.py  nodes.py  postgres.py  state.py
app/schemas/: __init__.py  models.py
app/streaming/: __init__.py  events.py
app/tools/: __init__.py  save_finding.py  web_search.py
docs/: app-api.md  app-core.md  app-graph.md  app-memory.md  app-schemas.md  app-streaming.md  app-tools.md  app.md  architecture.md  issues-and-fixes.md  tests.md
tests/: test_api.py  test_hitl.py  test_load.py  test_memory.py  test_nodes.py
(+4 files in other folders)
