[project]
name = "2-personal-search-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.9.1",
    "pydantic>=2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.63.0",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]
