[project]
name = "2-personal-search-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.9.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.63.0",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "tavily-python>=0.7.26",
    "uvicorn[standard]>=0.49.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
